--- a/public/contacts.html
+++ b/public/contacts.html
@@ -145,6 +145,11 @@
                       </li>
                       <li>
                         <a href="#">
+                          имплантация по протоколу All-on-4 / 6
+                        </a>
+                      </li>  
+                      <li>
+                        <a href="#">
                           синус-лифтинг
                         </a>
                       </li>
@@ -629,7 +634,7 @@
                   </div>
               </div>
             </div>
-            <div class="description-slider slider-four">
+            <div class="swiper description-slider slider-four blue-light">
               <div class="swiper-wrapper">
                 <div class="swiper-slide description-slider-item">
                   <img src="./images/gallery-1.jpg" alt="photo">
