--- a/public/doctor.html
+++ b/public/doctor.html
@@ -145,6 +145,11 @@
                       </li>
                       <li>
                         <a href="#">
+                          имплантация по протоколу All-on-4 / 6
+                        </a>
+                      </li>  
+                      <li>
+                        <a href="#">
                           синус-лифтинг
                         </a>
                       </li>
@@ -619,7 +624,7 @@
                 <div class="h4">
                     Сертификаты и награды
                 </div>
-                <div class="diploms-slider slider-four">
+                <div class="swiper diploms-slider slider-four blue">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide diploms-slider-item">
                         <img src="./images/diplom-1.jpg" alt="diplom">
@@ -663,11 +668,11 @@
 
         <section class="feedback">
             <div class="container">
-              <div class="feedback-wrapper">
-                <div class="feedback-title h3">
-                    записаться на прием
-                </div>
+              <div class="feedback-wrapper">                
                 <form class="feedback-form" id="appointment">
+                  <div class="feedback-title h3">
+                    записаться на прием
+                  </div>
                   <div class="ui-field">
                     <input type="text" placeholder="Имя Фамилия" required name="name" id="name" class="ui-input name">
                   </div>
@@ -685,12 +690,10 @@
       <!-- отзывы -->
       <section class="reviews bg-blue">
         <div class="container">
-          <div class="work-title">
-            <div class="h3">
-              Отзывы
-            </div>            
+          <div class="section-title">
+            Отзывы                      
           </div>
-          <div class="reviews-slider slider-four">
+          <div class="swiper reviews-slider slider-four blue">
             <div class="swiper-wrapper">
 
               <div class="swiper-slide reviews-slide">
