--- a/public/vacancies.html
+++ b/public/vacancies.html
@@ -145,6 +145,11 @@
                       </li>
                       <li>
                         <a href="#">
+                          имплантация по протоколу All-on-4 / 6
+                        </a>
+                      </li>  
+                      <li>
+                        <a href="#">
                           синус-лифтинг
                         </a>
                       </li>
@@ -540,7 +545,7 @@
                                 Стабильный доход
                             </div>
                             <p>
-                                Система дохода каждого сотрудника основана на качестве работы, а не ее количестве..
+                                Система дохода каждого сотрудника основана на качестве работы, а не ее количестве.
                             </p>                          
                         </div>
                     </div>
@@ -689,7 +694,7 @@
         </section>
         <section class="vacancies-gallery bg-blue-light">
             <div class="container">
-                <div class="description-slider slider-four">
+                <div class=" swiper description-slider slider-four blue-light">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide description-slider-item">
                             <img src="./images/gallery-1.jpg" alt="photo">
