--- a/src/articles.html
+++ b/src/articles.html
@@ -144,6 +144,11 @@
                       </li>
                       <li>
                         <a href="#">
+                          имплантация по протоколу All-on-4 / 6
+                        </a>
+                      </li>  
+                      <li>
+                        <a href="#">
                           синус-лифтинг
                         </a>
                       </li>
@@ -638,11 +643,11 @@
 
         <section class="feedback">
             <div class="container">
-              <div class="feedback-wrapper">
-                <div class="feedback-title h3">
-                    записаться на прием
-                </div>
+              <div class="feedback-wrapper">               
                 <form class="feedback-form" id="appointment">
+                  <div class="feedback-title h3">
+                    записаться на прием
+                  </div>
                   <div class="ui-field">
                     <input type="text" placeholder="Имя Фамилия" required name="name" id="name" class="ui-input name">
                   </div>
