--- a/src/implantation.html
+++ b/src/implantation.html
@@ -144,6 +144,11 @@
                       </li>
                       <li>
                         <a href="#">
+                          имплантация по протоколу All-on-4 / 6
+                        </a>
+                      </li>  
+                      <li>
+                        <a href="#">
                           синус-лифтинг
                         </a>
                       </li>
@@ -860,7 +865,7 @@
                 <div class="implants-title h4">
                     В нашей стоматологической клинике «Дентополис» мы используем следующие системы имлпантантов:
                 </div>
-                <div class="implants-slider slider-four">
+                <div class="swiper implants-slider slider-four blue">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide implants-slider-item">
                             <img src="./images/implant-1.jpg" alt="implant" loading="lazy">
@@ -908,7 +913,7 @@
                   Врачи клиники "Дентополис", которые занимаются имплантацией и протезированием на имплантатах
                 </div>                
               </div>
-              <div class="doctors-slider slider-four">
+              <div class="swiper doctors-slider slider-four blue-light">
                 <div class="swiper-wrapper">
     
                   <div class="swiper-slide doctor">
@@ -1081,92 +1086,92 @@
             </a>
         </section>
         <section class="examples bg-blue-light">            
-            <div class="container">
-                <div class="h3">
-                    Наши работы
-                </div>                
-                <div class="examples-wrapper margin">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="example flex horizontal">
-                                <div class="example-images">
-                                    <div class="before">                  
-                                        <img src="./images/before.jpg" alt="before" loading="lazy">
-                                    </div>
-                                    <div class="after">                 
-                                        <img src="./images/after.jpg" alt="after" loading="lazy">
-                                    </div>
-                                </div>
-                                <div class="example-text">
-                                    <div class="description">
-                                      <p>
-                                        Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония
-                                      </p>
-                                      <p>
-                                        Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  
-                                      </p>                                            
-                                    </div>
-                                    <div class="executor">                                        
-                                        <a href="#" class="executor-name">
-                                            Николаеня Александр Николаевич
-                                        </a>
-                                    </div>
-                                    <div class="executor">                                       
-                                        <a href="#" class="executor-name">
-                                            Крат Максим Игоревич ​
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>                            
-                        </div>
-
-                        <div class="col-lg-6">
-                          <div class="example flex horizontal">
-                              <div class="example-images">
-                                  <div class="before">                  
-                                      <img src="./images/before.jpg" alt="before" loading="lazy">
-                                  </div>
-                                  <div class="after">                 
-                                      <img src="./images/after.jpg" alt="after" loading="lazy">
-                                  </div>
-                              </div>
-                              <div class="example-text">
-                                  <div class="description">
-                                    <p>
-                                      Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония
-                                    </p>                                   
-                                  </div>
-                                  <div class="executor">
-                                      <a href="#" class="executor-name">
-                                          Николаеня Александр Николаевич
-                                      </a>
-                                  </div>
-                                  <div class="executor">
-                                      <a href="#" class="executor-name">
-                                          Крат Максим Игоревич ​
-                                      </a>
-                                  </div>
-                              </div>
-                          </div>                            
-                        </div>
+          <div class="container">
+            <div class="section-title">
+              Наши работы
+            </div>                
+            <div class="examples-wrapper margin">
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="example flex horizontal">
+                    <div class="example-images">
+                      <div class="before">                  
+                        <img src="./images/before.jpg" alt="before" loading="lazy">
+                      </div>
+                      <div class="after">                 
+                        <img src="./images/after.jpg" alt="after" loading="lazy">
+                      </div>
                     </div>
-                  </div>
-                </div>  
-                <a href="#" class="ui-btn ui-btn-green work-all">
-                    Все Работы
-                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
-                      <path d="M7 1L7 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                      <path d="M1 7L13 7" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>              
-                </a>                    
+                    <div class="example-text">
+                      <div class="description">
+                        <p>
+                          Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония
+                        </p>
+                        <p>
+                          Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  
+                        </p>                                            
+                      </div>
+                      <div class="executor">                                        
+                        <a href="#" class="executor-name">
+                          Николаеня Александр Николаевич
+                        </a>
+                      </div>
+                      <div class="executor">                                       
+                        <a href="#" class="executor-name">
+                          Крат Максим Игоревич ​
+                        </a>
+                      </div>
+                    </div>
+                  </div>                            
+                </div>
+
+                <div class="col-lg-6">
+                  <div class="example flex horizontal">
+                      <div class="example-images">
+                          <div class="before">                  
+                              <img src="./images/before.jpg" alt="before" loading="lazy">
+                          </div>
+                          <div class="after">                 
+                              <img src="./images/after.jpg" alt="after" loading="lazy">
+                          </div>
+                      </div>
+                      <div class="example-text">
+                          <div class="description">
+                            <p>
+                              Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония
+                            </p>                                   
+                          </div>
+                          <div class="executor">
+                              <a href="#" class="executor-name">
+                                  Николаеня Александр Николаевич
+                              </a>
+                          </div>
+                          <div class="executor">
+                              <a href="#" class="executor-name">
+                                  Крат Максим Игоревич ​
+                              </a>
+                          </div>
+                      </div>
+                  </div>                            
+                </div>
+              </div>
+            </div>
+            <a href="#" class="ui-btn ui-btn-green work-all">
+              Все Работы
+              <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+                <path d="M7 1L7 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M1 7L13 7" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </a>  
+          </div>                                   
         </section>       
         <section class="feedback">
             <div class="container">
-                <div class="feedback-wrapper">
-                    <div class="feedback-title h3">
-                        записаться на прием
-                    </div>
+                <div class="feedback-wrapper">                    
                     <form class="feedback-form" id="appointment">
+                      <div class="feedback-title h3">
+                        записаться на прием
+                      </div>
                         <div class="ui-field">
                             <input type="text" placeholder="Имя Фамилия" required name="name" id="name" class="ui-input name">
                         </div>
