--- a/src/prices.html
+++ b/src/prices.html
@@ -144,6 +144,11 @@
                       </li>
                       <li>
                         <a href="#">
+                          имплантация по протоколу All-on-4 / 6
+                        </a>
+                      </li>  
+                      <li>
+                        <a href="#">
                           синус-лифтинг
                         </a>
                       </li>
