--- a/src/wisdomTeeth.html
+++ b/src/wisdomTeeth.html
@@ -144,6 +144,11 @@
                       </li>
                       <li>
                         <a href="#">
+                          имплантация по протоколу All-on-4 / 6
+                        </a>
+                      </li>  
+                      <li>
+                        <a href="#">
                           синус-лифтинг
                         </a>
                       </li>
@@ -741,11 +746,11 @@
                                     Хирургия
                                 </div>
                                 <div class="items">
-                                    <div class="price-row">
+                                    <a href="#" class="price-row">
                                       <div class="name">
                                         Хирургия
                                       </div>                                     
-                                    </div>
+                                    </ф>
                                     <a href="#" class="price-row">
                                       <div class="name">
                                         Синус-лифтинг
