--- a/public/prices.html
+++ b/public/prices.html
@@ -433,7 +433,7 @@
 
     <!-- main screen start -->
     <main class="main">
-        <section class="prices bg-blue-light">
+        <section class="section prices bg-blue-light">
             <div class="container">
                 <div class="h2">
                     Цены стоматологических услуг
@@ -865,7 +865,7 @@
             </div>
         </section>
 
-        <section class="methods bg-blue">
+        <section class="section methods bg-blue">
           <div class="container">
             <div class="h3">
               способы оплаты
@@ -906,7 +906,7 @@
           </div>
         </section>
 
-        <section class="installment bg-blue-light">
+        <section class="section installment bg-blue-light">
           <div class="container">
             <div class="installment-title">
               «Дентополис» предлагает стоматологические услуги по картам рассрочек
