--- a/public/articles.html
+++ b/public/articles.html
@@ -434,7 +434,7 @@
     <!-- main screen start -->
     <main class="main">
       
-        <section class="articles bg-blue-light">            
+        <section class="section articles bg-blue-light">            
             <div class="container">
                 <div class="h3">
                     Статьи
