--- a/public/vacancies.html
+++ b/public/vacancies.html
@@ -453,7 +453,7 @@
                 </div>                
             </div>
         </section>
-        <section class="vacancies-list bg-blue-light">
+        <section class="section vacancies-list bg-blue-light">
             <div class="container">               
                 <div class="h4">
                     Стоматологическая клиника «Дентополис» открывает набор по следующим вакансиям:
@@ -490,7 +490,7 @@
                 </a>                       
             </div>
         </section>
-        <section class="vacancies-benefits bg-blue">
+        <section class="section vacancies-benefits bg-blue">
             <div class="container">
                 <div class="h3">
                     Что мы предлагаем
@@ -565,7 +565,7 @@
                 </div>
             </div>
         </section>
-        <section class="vacancies-contacts bg-blue-light">
+        <section class="section vacancies-contacts bg-blue-light">
             <div class="container">
                 <div class="vacancies-contacts-wrapper">
                     <div class="contacts-map-wrapper">
