--- a/src/acticleDetail.html
+++ b/src/acticleDetail.html
@@ -580,7 +580,7 @@
                 </div>                
             </div>
         </section>
-        <section class="articles-section bg-blue">
+        <section class="section articles-section bg-blue">
             <div class="container">                    
                 <div class="swiper articles-slider">
                     <div class="slider-arrows">
