--- a/src/contacts.html
+++ b/src/contacts.html
@@ -480,7 +480,7 @@
                 </div>
             </div>
         </section>
-        <section class="contacts bg-blue-light">
+        <section class="section contacts bg-blue-light">
           <div class="container">               
             <div class="contacts-wrapper">
               <div class="contacts-main-wrapper">                       
@@ -705,7 +705,7 @@
             </div>               
           </div>
         </section>
-        <section class="requisites bg-blue">
+        <section class="section requisites bg-blue">
           <div class="container">
             <div class="requisites-wrapper">
               <div class="requisites-text">
