--- a/src/wisdomTeeth.html
+++ b/src/wisdomTeeth.html
@@ -471,7 +471,7 @@
                 </div>
             </div>
         </section>
-        <section class="service-content bg-blue-light">
+        <section class="section service-content bg-blue-light">
             <div class="container">               
                 <div class="service-wrapper">
                     <div class="service-main-wrapper">                       
@@ -625,7 +625,7 @@
                             <div class="doctors-wrapper horizontal">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <div class="swiper-slide doctor flex single">
+                                        <div class="doctor-card flex single">
                                             <div class="doctor-photo">
                                                 <img src="./images/doctor-1-big.jpg" alt="doctor" loading="lazy">
                                             </div>
@@ -661,7 +661,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <div class="swiper-slide doctor flex single">
+                                        <div class="doctor-card flex single">
                                             <div class="doctor-photo">
                                                 <img src="./images/doctor-2-big.jpg" alt="doctor" loading="lazy">
                                             </div>
@@ -701,7 +701,7 @@
                           <div class="h4">
                               Наши работы
                           </div>                
-                          <div class="examples-wrapper">
+                          <div class="examples-wrapper aside">
                               <div class="row">
                                   <div class="col-lg-12">
                                       <div class="example flex horizontal">
