--- a/public/contacts.html
+++ b/public/contacts.html
@@ -636,57 +636,92 @@
             </div>
             <div class="swiper description-slider slider-four blue-light">
               <div class="swiper-wrapper">
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-1.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-1.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-2.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-2.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-3.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-3.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-4.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-4.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-5.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-5.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-6.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-6.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-7.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-7.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-8.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-8.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-9.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-9.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-10.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-10.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-11.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-11.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-12.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-12.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-13.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-13.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-14.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-14.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-15.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-15.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-16.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-16.jpg" alt="photo">
+                  </div>
                 </div>
-                <div class="swiper-slide description-slider-item">
-                  <img src="./images/gallery-17.jpg" alt="photo">
+                <div class="swiper-slide description-slide">
+                  <div class="description-slide-item">
+                    <img src="./images/gallery-17.jpg" alt="photo">
+                  </div>
                 </div>
+                
               </div>
               <div class="slider-arrows">
                 <div class="slider-prev">           
@@ -702,7 +737,7 @@
                   </svg>               
                 </div>          
               </div> 
-            </div>               
+            </div>              
           </div>
         </section>
         <section class="section requisites bg-blue">
