--- a/src/examples.html
+++ b/src/examples.html
@@ -951,7 +951,7 @@
             </div> 
 
           </div>
-          <div class="show-all">
+          <div class="ui-centered">
             <a href="#" class="ui-btn ui-btn-green work-all">
               Все Отзывы
               <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
